--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,10 @@ default: &default
 development:
   <<: *default
   database: trello_development
-
+  host: trello_db
+  port: 5432
+  username: postgres
+  password: password
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
