docker file compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,55 @@
 version: '3'
+networks:
+  development:
+  test:
+volumes:
+  db_data:
+  gem_cache:
+  shared_data:
 services:
+  trello_redis:
+    image: redis:4.0-alpine
+    command: redis-server
+    networks:
+      - development
+      - test
+    volumes:
+      - shared_data:/var/shared/redis
   db:
-    image: postgres:latest
+    image: postgres:12.5-alpine
+    container_name: db
+    volumes:
+      - db_data:/var/lib/postgresql/data
+      - shared_data:/var/shared
+    networks:
+      - development
+      - test
     environment:
       - POSTGRES_PASSWORD=password
     ports:
       - 5099:5432
+  trello_app:
+    build:
+      context: .
+      dockerfile: Dockerfile.dev
+    container_name: trello_app
     volumes:
-      - "dbdata:/var/lib/postgresql/data"
-  redis:
-    image: redis:latest
+      - .:/var/app
+      - shared_data:/var/shared
+      - gem_cache:/usr/local/bundle/gems
+    networks:
+      - development
+    ports:
+      - 3000:3000
+    stdin_open: true
+    tty: true
+    env_file: .env.development
+    entrypoint: dev-entrypoint.sh
+    command: ['rails', 'server', '-p', '3000', '-b', '0.0.0.0']
     environment:
-      - POSTGRES_PASSWORD=password
-    ports:
-      - 6379:6379
-  web:
-    build: .
-    ports:
-      - "3000:3000"
-    depends_on:
-      - db
-      - redis
-    environment: 
+      # RAILS_ENV: development
       - DATABASE_URL=postgres://postgres:password@db:5432/postgres
       - REDIS_URL=redis://redis:6379
-    volumes:
-      - .:/app
-volumes:
-  dbdata:
-     
+    depends_on:
+      - db
+  
