--- a/config/database.yml
+++ b/config/database.yml
@@ -25,7 +25,7 @@ default: &default
 development:
   <<: *default
   database: trello_development
-  host: trello_db
+  host: localhost
   port: 5432
   username: postgres
   password: password
