--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ volumes:
   gem_cache:
   shared_data:
 services:
-  trello_redis:
+  redis:
     image: redis:4.0-alpine
     command: redis-server
     networks:
@@ -25,7 +25,8 @@ services:
       - development
       - test
     environment:
-      - POSTGRES_PASSWORD=password
+      POSTGRES_USER: shaista
+      POSTGRES_PASSWORD: password
     ports:
       - 5099:5432
   trello_app:
@@ -52,4 +53,5 @@ services:
       - REDIS_URL=redis://redis:6379
     depends_on:
       - db
+      - redis
   
