--- a/config/database.yml
+++ b/config/database.yml
@@ -24,11 +24,11 @@ default: &default
 
 development:
   <<: *default
-  database: trello_development
-  host: localhost
-  port: 5432
-  username: postgres
-  password: password
+  database: <%=ENV.fetch('DATABASE_NAME') {"trello_development"}%>
+  host: <%=ENV.fetch('DATABASE_HOST') {"localhost"}%>
+  port: <%=ENV.fetch('DATABASE_PORT') {"5432"}%>
+  username: <%=ENV.fetch('DATABASE_USERNAME') {"postgres"}%>
+  password: <%=ENV.fetch('DATABASE_PASSWORD') {"password"}%>
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
