--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,15 +2,15 @@ FROM ruby:3.0.2-alpine
 
 ENV APP_PATH /var/app
 ENV BUNDLE_VERSION 2.3.1
-ENV BUNDLE_PATH /bundle/gems
+ENV BUNDLE_PATH /usr/local/bundle/gems
 ENV TMP_PATH /tmp/
 ENV RAILS_LOG_TO_STDOUT true
 ENV RAILS_PORT 3000
 
 # copy entrypoint scripts and grant execution permissions
-COPY ./dev-docker-entrypoint.sh /bin/dev-entrypoint.sh
-COPY ./test-docker-entrypoint.sh /bin/test-entrypoint.sh
-RUN chmod +x /bin/dev-entrypoint.sh && chmod +x /bin/test-entrypoint.sh
+COPY ./dev-docker-entrypoint.sh /usr/local/bin/dev-entrypoint.sh
+COPY ./test-docker-entrypoint.sh /usr/local/bin/test-entrypoint.sh
+RUN chmod +x /usr/local/bin/dev-entrypoint.sh && chmod +x /usr/local/bin/test-entrypoint.sh
 
 # install dependencies for application
 RUN apk -U add --no-cache \
